<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato_semibold"
        android:text="Name"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="28sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/contact_input"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:inputType="text|textEmailAddress"
        android:paddingStart="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@color/textSecondary"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/height"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="28sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="28sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/inchesDropdown" />

    <Spinner
        android:id="@+id/feetDropdown"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/dropdown"
        android:entries="@array/feet"
        android:gravity="center"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/inchesDropdown"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/inchesDropdown"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/dropdown"
        android:entries="@array/inches"
        android:gravity="center"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/feetDropdown"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/feetDropdown"
        app:layout_constraintTop_toTopOf="@+id/feetDropdown" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/weight_input"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/textSecondary"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/lbs"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/em_contact"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="28sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/contact_input"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:inputType="text|textEmailAddress"
        android:paddingStart="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@color/textSecondary"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/disclaimer"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textSize="14sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="104dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:srcCompat="@drawable/next" />


</androidx.constraintlayout.widget.ConstraintLayout>